<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UnitsTabFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:scaleType="fitStart"
                        android:src="@drawable/bg_wave" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:background="@drawable/account_circle_bg"
                            android:contentDescription="@string/register_label"
                            android:src="@drawable/ic_baseline_library_books_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/units_label"
                            android:textColor="@color/purple_500"
                            android:textSize="24sp" />

                    </LinearLayout>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingHorizontal="24dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/registration_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_number_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/available_units"
                        android:textSize="24sp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"/>
                    <TextView
                        android:id="@+id/units_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:paddingRight="24dp"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="12sp"
                        android:visibility="invisible" />

                    <CheckBox
                        android:id="@+id/checkbox_artificial_intelligence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/artificial_intelligence" />

                    <CheckBox
                        android:id="@+id/checkbox_compiler_construction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/compiler_construction" />

                    <CheckBox
                        android:id="@+id/checkbox_theory_of_computing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/theory_of_computing" />


                    <CheckBox
                        android:id="@+id/checkbox_computer_security"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/computer_security" />

                    <CheckBox
                        android:id="@+id/checkbox_mobile_programming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/mobile_programming" />

                    <CheckBox
                        android:id="@+id/checkbox_discrete_mathematics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/discrete_maths" />

                    <CheckBox
                        android:id="@+id/checkbox_data_structures"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/data_structures" />

                    <Button
                        android:id="@+id/register_units"
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/units_label"
                        app:icon="@drawable/ic_baseline_login_36" />

                </LinearLayout>
            </LinearLayout>

        </FrameLayout>
    </ScrollView>

</FrameLayout>