<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationTabFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:scaleType="fitStart"
                        android:src="@drawable/bg_wave" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:background="@drawable/account_circle_bg"
                            android:contentDescription="@string/register_label"
                            android:src="@drawable/ic_baseline_account_circle_64" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/register_label"
                            android:textColor="@color/purple_500"
                            android:textSize="24sp" />
                    </LinearLayout>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingHorizontal="24dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/student_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/student_name_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/registration_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_number_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/course_of_study"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/course_of_study_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/year_of_study"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/year_of_study">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/register"
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/register_label"
                        app:icon="@drawable/ic_baseline_login_36" />

                </LinearLayout>
            </LinearLayout>

            <!--    ProgressBar to indicate loading of user details    -->
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>
    </ScrollView>

</FrameLayout>